# northgrove-timelapse

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  config-example.yaml  events.yaml  gdrive.py  pyproject.toml  test_gdrive_access.py  timelapse.py  worker.py
.github/workflows/: container.yaml
frontend/: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
frontend/app/: layout.tsx  page.tsx
